<resources>
    <string name="app_name">Capstone</string>
    <string name="title_home">Movie</string>
    <string name="title_dashboard">Favorite</string>
    <string name="title_notifications">Watchlist</string>
    <string name="top_rated">Top Rated</string>
    <string name="movie">Movie</string>
    <string name="popular">Popular</string>
    <string name="up_coming">Up Coming</string>
    <string name="now_playing">Now Playing</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection_please_try_again">No internet connection, please try again</string>
    <string name="title">Title</string>
    <string name="genres">Genres</string>
    <string name="trailers">Trailers</string>
    <string name="more_information">More information</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vote_average">Vote Average</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>
    <string name="collection">Collection</string>
    <string name="watchlist">Watchlist</string>
    <string name="language">Original Language</string>
    <string name="status">Status</string>
    <string name="runtime">Runtime</string>
    <string name="production_countries">Production Country</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="production_companies">Companies</string>
    <string name="countries">Countries</string>
    <string name="favorite">Favorite</string>
    <string name="trailers_name">Trailers Name</string>
    <string name="share">Share with</string>
    <string name="original_title">Original Title</string>
    <string name="home_page">Homepage</string>
    <string name="providers">Providers</string>
    <string name="netflix">Netflix</string>
    <string name="apple_plus">Apple Tv +</string>
    <string name="disney">Disney +</string>
    <string name="best_collection_movies">Best Collections\nMovie</string>
    <string name="hbo_max">HBO max</string>
    <string name="keyword">Keyword</string>
    <string name="view_collection">View Collection</string>
    <string name="just_watch">Just Watch</string>
    <string name="tmdb_movie">TMDB Movie</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="certification">Certification</string>
    <string name="credits_name">Credits Name</string>
    <string name="job_or_character">Job or character</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="paramount">Paramount +</string>
    <string name="stream_on">Stream on</string>
    <string name="buy_on">Buy on</string>
    <string name="rent_on">Rent on</string>
    <string name="department">Department</string>
    <string name="born_on">Born on</string>
    <string name="from">From</string>
    <string name="google">Google</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="your_password">Your Password....</string>
    <string name="your_email">Your Email....</string>
    <string name="logout">Logout</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="skip_this_page">Skip this page</string>
    <string name="login_terlebih_dahulu_untuk_nmelihat_watchlist_anda">Login terlebih dahulu untuk\nmelihat watchlist anda</string>
    <string name="update_profile">Update Profile</string>
    <string name="your_watchlist">Your watchlist movies</string>
    <string name="your_favorite_trailers">Your favorite trailers</string>
    <string name="trailers_amp_people"><![CDATA[Trailers & People]]></string>
    <string name="your_favorite_movies">Your Favorite Movies</string>
    <string name="your_username">Your Username</string>

</resources>