<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_movie"
        android:enabled="true"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_genres"
        android:icon="@drawable/ic_genres"
        android:enabled="true"
        android:title="@string/genres" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite"
        android:enabled="true"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_watchlist"
        android:enabled="true"
        android:title="@string/title_notifications" />

</menu>