<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".ui.auth.LoginActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Login"
        app:navigationIcon="@drawable/ic_back"
        app:titleTextColor="@color/light_grey"
        android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar"/>


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:padding="20dp"
        android:background="@drawable/bg_text_view"
        android:hint="@string/your_email"
        android:textColorHint="@color/grey"
        android:inputType="textEmailAddress"
        android:textColor="@color/light_grey"/>


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:padding="20dp"
        android:background="@drawable/bg_text_view"
        android:hint="@string/your_password"
        android:textColorHint="@color/grey"
        android:inputType="textPassword"
        android:textColor="@color/light_grey"/>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:textAllCaps="false"
        android:backgroundTint="@color/orange"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:textSize="15sp"
        android:textColor="@color/grey"
        android:text="@string/don_t_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvRegister"
            android:textSize="15sp"
            android:textColor="@color/orange"
            android:text="@string/register"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>