<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMovie"
        app:navigationIcon="@drawable/ic_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/light_grey"
        android:theme="@style/ToolbarTheme"/>


        <TextView
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/bg_collection"
            android:layout_marginTop="30dp"
            android:text="@string/your_watchlist"
            android:padding="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/light_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableEndCompat="@drawable/ic_next" />

    <TextView
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/bg_collection"
        android:layout_marginTop="30dp"
        android:text="@string/your_favorite_trailers"
        android:padding="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/light_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableEndCompat="@drawable/ic_next" />

    <Button
        android:id="@+id/btnLogout"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:backgroundTint="@color/orange"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>


</LinearLayout>