<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPadding="10dp"
    app:cardBackgroundColor="@color/primary_color"
    app:cardCornerRadius="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageReviews"
                    android:scaleType="fitXY"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>

                <TextView
                    android:id="@+id/tvNameReviews"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/light_grey"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/btnOpen"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/ic_open_with"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvRating"
                android:drawablePadding="10dp"
                android:textColor="@color/light_grey"
                android:layout_marginTop="10dp"
                android:text="@string/vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_star" />

            <TextView
                android:id="@+id/tvReviews"
                android:textColor="@color/light_grey"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/tvUpdate"
                android:text="@string/update"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/light_grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
