<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:id="@+id/nested"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".ui.movie.AboutFragment">

    <LinearLayout
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frame_Image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:background="@drawable/bg_image"
                android:layout_width="105dp"
                android:layout_height="140dp"/>

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/ic_no_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ImageView
                android:id="@+id/imageMovie"
                android:scaleType="fitXY"
                android:layout_width="105dp"
                android:layout_height="140dp"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/frame_Image"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvTitleMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:padding="5dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvVoteAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:padding="5dp"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_star" />


            <TextView
                android:id="@+id/tvReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:padding="5dp"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_date" />

        </LinearLayout>

    </RelativeLayout>


    <TextView
        android:id="@+id/tvOverview"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        android:textColor="@color/grey"/>


    <TextView
        android:id="@+id/tvGenres"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGenres"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/tvMoreInformation"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:textStyle="bold" />

        <GridLayout
            android:padding="10dp"
            android:columnCount="2"
            android:rowCount="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/language"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvLanguage"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:layout_marginTop="15dp"
                android:text="@string/status"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvStatus"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:layout_marginTop="15dp"
                android:text="@string/runtime"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/tvRuntime"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:layout_marginTop="15dp"
                android:text="@string/budget"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvBudget"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:layout_marginTop="15dp"
                android:text="@string/revenue"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvRevenue"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:layout_marginTop="15dp"
                android:text="@string/production_countries"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvCountries"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:layout_width="180dp"
                android:layout_height="wrap_content"/>


            <TextView
                android:layout_marginTop="15dp"
                android:text="@string/production_companies"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvCompanies"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_width="180dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_height="wrap_content"/>


        </GridLayout>


        <RelativeLayout
            android:id="@+id/itemCollection"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageCollection"
                android:layout_width="320dp"
                android:layout_height="180dp"
                android:layout_centerInParent="true"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/tvCollection"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <TextView
            android:id="@+id/tvTrailers"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:textStyle="bold" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTrailers"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>